Update style and fix stuck focus on keyboard press

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,11 @@ h1 {
   color: white;
 }
 
+h2,
+p {
+  color: #3e1447;
+}
+
 footer {
   position: fixed;
   left: 12px;
@@ -50,12 +55,12 @@ footer {
   padding-top: 8em;
 }
 
-.btn-light:focus {
+/* .btn-light:focus {
   outline: none;
   box-shadow: none;
   background-color: #f7f7f7;
   color: #a58faa;
-}
+} */
 
 .btn-dark {
   height: 10em;
@@ -63,12 +68,12 @@ footer {
   padding: 5em 0.1em 0.5em 0;
 }
 
-.btn-dark:focus {
+/* .btn-dark:focus {
   outline: none;
   box-shadow: none;
   background-color: #292b2c;
   color: #a58faa;
-}
+} */
 
 .white-key {
   display: inline-block;
@@ -90,17 +95,6 @@ footer {
 .keyboard {
   width: 90%;
   padding: 1em;
-}
-
-/* keyboard legend */
-.note-color {
-  color: white;
-}
-
-.keyboard-color {
-  color: #a58faa;
-  background-color: white;
-  padding: 5px;
 }
 
 /* song button group */
